--- a/.github/workflows/json.yml
+++ b/.github/workflows/json.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           path: community.yml
       - name: Echo community.yml
-        run: OUTPUT=$(echo "${{ steps.package.outputs.content }}" | awk -F'[][]' -e '/ role:/ && FNR > 13' | awk -F'[][]' '{print $2}' | tr '\n' ',' | sed 's/,*$//' | sed "s/.\(airsonic\|alltube\).,//g")
+        run: OUTPUT=$(echo "${{ steps.package.outputs.content }}" | awk -F'[][]' -e '/ role:/ && FNR > 13' | awk -F'[][]' '{print $2}' | tr '\n' ',' | sed 's/,*$//' | sed "s/.\(airsonic\|alltube\).,//g" 2>&1)
       - id: set-matrix
         run: echo "::set-output name=matrix::{\"roles\":[$OUTPUT]}"
   job2:
