--- a/.github/workflows/json.yml
+++ b/.github/workflows/json.yml
@@ -7,15 +7,16 @@ jobs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
       - uses: actions/checkout@v2
-      - name: Read package.json
-        id: package
+      - name: Read community.json
+        id: community
         uses: juliangruber/read-file-action@v1
         with:
           path: community.yml
       - name: Echo community.yml
-        run: echo "${{ steps.package.outputs.content }}" | awk -F'[][]' -e '/ role:/ && FNR > 13' | awk -F'[][]' '{print $2}' | tr '\n' ',' | sed 's/,*$//' | sed "s/.\(airsonic\|alltube\).,//g"
+        run: echo "${{ steps.community.outputs.content }}" | awk -F'[][]' -e '/ role:/ && FNR > 13' | awk -F'[][]' '{print $2}' | tr '\n' ',' | sed 's/,*$//' | sed "s/.\(airsonic\|alltube\).,//g"
+        id: validroles
       - id: set-matrix
-        run: echo "::set-output name=matrix::{\"roles\":[${{ steps.set-matrix.outputs.matrix | awk -F'[][]' -e '/ role:/ && FNR > 13' | awk -F'[][]' '{print $2}' | tr '\n' ',' | sed 's/,*$//' | sed "s/.\(airsonic\|alltube\).,//g }}]}"
+        run: echo "${{ steps.validroles.outputs.content }}"
   job2:
     name: '${{ matrix.roles }}'
     needs: job1
