--- a/.github/workflows/json.yml
+++ b/.github/workflows/json.yml
@@ -14,8 +14,7 @@ jobs:
           path: community.yml
       - name: Echo community.yml
         run: |
-          $output=(echo "$CONTENT" | awk -F'[][]' -e '/ role:/ && FNR > 13' | awk -F'[][]' '{print $2}' | tr '\n' ',' | sed 's/,*$//' | sed "s/.\(airsonic\|alltube\).,//g)
-          Write-Output "::set-output name=content::$output"
+          echo "$CONTENT" | awk -F'[][]' -e '/ role:/ && FNR > 13' | awk -F'[][]' '{print $2}' | tr '\n' ',' | sed 's/,*$//' | sed "s/.\(airsonic\|alltube\).,//g
         id: validroles
         env:
           CONTENT: ${{ steps.community.outputs.content }}
