--- a/.github/workflows/json.yml
+++ b/.github/workflows/json.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Parse community.yml
         run: |
           export OUTPUT=`awk -F'[][]' -e '/ role:/ && FNR > 13' community.yml | awk -F'[][]' '{print $2}' | tr '\n' ',' | sed 's/,*$//' | sed "s/.\(airsonic\|alltube\).,//g"`
-          Write-Output "::set-output name=content::$OUTPUT"
+          echo "::set-output name=content::$OUTPUT"
         id: validroles
       - id: set-matrix
         run: echo "${{ steps.validroles.outputs.content }}"
