--- a/.github/workflows/json.yml
+++ b/.github/workflows/json.yml
@@ -11,9 +11,7 @@ jobs:
         run: |
           export OUTPUT=`awk -F'[][]' -e '/ role:/ && FNR > 13' community.yml | awk -F'[][]' '{print $2}' | tr '\n' ',' | sed 's/,*$//' | sed "s/.\(airsonic\|alltube\).,//g"`
           echo "::set-output name=content::$OUTPUT"
-        id: validroles
-      - id: set-matrix
-        run: echo "${{ steps.validroles.outputs.content }}"
+          echo "::set-output name=matrix::{\"roles\":[$OUTPUT]}"
   job2:
     name: '${{ matrix.roles }}'
     needs: job1
