--- a/.github/workflows/json.yml
+++ b/.github/workflows/json.yml
@@ -8,10 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Parse community.yml
-        run: |
-          export OUTPUT=`awk -F'[][]' -e '/ role:/ && FNR > 13' community.yml | awk -F'[][]' '{print $2}' | tr '\n' ',' | sed 's/,*$//' | sed "s/.\(airsonic\|alltube\).,//g"`
-          echo "::set-output name=content::$OUTPUT"
-          echo "::set-output name=matrix::{\"roles\":[$OUTPUT]}"
+        run: export OUTPUT=`awk -F'[][]' -e '/ role:/ && FNR > 13' community.yml | awk -F'[][]' '{print $2}' | tr '\n' ',' | sed 's/,*$//' | sed "s/.\(airsonic\|alltube\).,//g"` && echo "::set-output name=matrix::{\"roles\":[$OUTPUT]}"
   job2:
     name: '${{ matrix.roles }}'
     needs: job1
