--- a/.github/workflows/json.yml
+++ b/.github/workflows/json.yml
@@ -7,7 +7,7 @@ jobs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
       - uses: actions/checkout@v2
-      - name: Parse community.yml
+      - id: set-matrix
         run: echo "::set-output name=matrix::{\"roles\":[$(awk -F'[][]' -e '/ role:/ && FNR > 13' community.yml | awk -F'[][]' '{print $2}' | tr '\n' ',' | sed 's/,*$//' | sed "s/.\(airsonic\|alltube\).,//g")]}"
   job2:
     name: '${{ matrix.roles }}'
